fix mobile subline text alignment: force left-align
- Add text-align: left to subline cells on mobile
- Prevents right-alignment when table columns collapse

--- a/style.css
+++ b/style.css
@@ -285,5 +285,10 @@ a:hover {
 
   .itemlist tr:not(.story-row) td:last-child {
     padding-left: 24px;
+    text-align: left;
+  }
+
+  .subline {
+    text-align: left;
   }
 }
